tests/e2e/gateway-services/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg-service-test
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    management:
      cluster:
        hostname: gateway.brcmlabs.com
      restman:
        enabled: true
      graphman:
        enabled: true
      service:
        enabled: true
        type: LoadBalancer
        ports:
          - name: test
            port: 9443
            targetPort: 9443
            protocol: TCP
        sessionAffinity: ClientIP
        sessionAffinityConfig:
          clientIP:
            timeoutSeconds: 10800
        internalTrafficPolicy: Local
        externalTrafficPolicy: Local
    resources:
      requests: {}
      limits: {}
    autoscaling:
      enabled: false
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    service:
      # annotations:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
      sessionAffinity: ClientIP
      sessionAffinityConfig:
        clientIP:
          timeoutSeconds: 8000
      internalTrafficPolicy: Local
      externalTrafficPolicy: Local
      loadBalancerSourceRanges:
       - 10.10.10.0/24
      loadBalancerIP: 10.10.10.1
      externalIPs:
        - 10.10.10.1
        - 10.10.10.2
