tests/e2e/gateway-services/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 100
---
apiVersion: v1
kind: Service
metadata:
  name: ssg
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
    - name: management
      port: 9443
      protocol: TCP
      targetPort: management
  type: LoadBalancer
  internalTrafficPolicy: Local
  externalTrafficPolicy: Local
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 8000
  loadBalancerSourceRanges:
    - 10.10.10.0/24
  loadBalancerIP: 10.10.10.1
  externalIPs:
    - 10.10.10.1
    - 10.10.10.2
---
apiVersion: v1
kind: Service
metadata:
  name: ssg-management-service
spec:
  ports:
  - name: test
    port: 9443
    protocol: TCP
    targetPort: test
  type: LoadBalancer
  internalTrafficPolicy: Local
  externalTrafficPolicy: Local
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
